data/derived/comb/progs/unify/prog7340.ml.out
Characters 162-164:
  [mulByDigit i ([h2+(h mod 10)]@t2)];;
                                 ^^
Error: This expression has type int list list
       but an expression was expected of type int list
       Type int list is not compatible with type int 
